fixed overflowing alt tag on broken images

--- a/src/apps/media-2/src/app/components/MediaShared.less
+++ b/src/apps/media-2/src/app/components/MediaShared.less
@@ -39,6 +39,12 @@
     align-items: center;
     min-height: 350px;
   }
+  //Prevent alt tag from overflowing card
+  img {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 .Input {
